Fix build errors

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,6 +13,17 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Swagger UI config
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.try-it-out-enabled=true
+springdoc.swagger-ui.operations-sorter=method
+springdoc.swagger-ui.tags-sorter=alpha
+springdoc.swagger-ui.filter=true
+
+# Logging configuration for debugging
+logging.level.org.springdoc=DEBUG
+logging.level.com.Dukaan.store=DEBUG
+logging.level.org.springframework.security=DEBUG
 
 # Mail config (replace with your SMTP server details)
 spring.mail.host=smtp.example.com
